Feature: IGSN metadata search filters (#1255)
* feat: add IGSN metadata search filters

* Fixed issues from review

* Fixed issues from review

* Fixed issue from review
